--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ const recipes = {
   "Tomatenrisotto met spinazie en chorizo": [
     {name: "Risottorijst", amount: 400, unit: "g", category: "Rijst/Couscous/Pasta"},
     {name: "Tomatenblokjes", amount: 1, unit: "blikje", category: "Groenten"},
-    {name: "Ui", amount: 2, unit: "stuks", category: "Groenten"},
+    {name: "Ui", amount: 2, unit: "stuk", category: "Groenten"},
     {name: "Spinazie", amount: 400, unit: "g", category: "Groenten"},
     {name: "Citroen", amount: 1, unit: "stuk", category: "Groenten"},
     {name: "Chorizo", amount: 200, unit: "g", category: "Vlees/Vis"},
@@ -261,7 +261,7 @@ const recipes = {
     {name: "Zout", amount: 0, unit: "", category: "Kruiden"}
   ],
   "Vissticks met spinazie à la crème en krieltjes": [
-    {name: "Vissticks", amount: 20, unit: "stuks", category: "Vlees/Vis"},
+    {name: "Vissticks", amount: 20, unit: "stuk", category: "Vlees/Vis"},
     {name: "Spinazie", amount: 750, unit: "g", category: "Groenten"},
     {name: "Krieltjes", amount: 900, unit: "g", category: "Groenten"},
     {name: "Appelmoes", amount: 0, unit: "naar smaak", category: "Groenten"},
@@ -298,9 +298,9 @@ const recipes = {
   "Hutspot met speklapjes": [
     {name: "Aardappelen", amount: 1000, unit: "g", category: "Groenten"},
     {name: "Hutspotgroenten", amount: 500, unit: "g", category: "Groenten"},
-    {name: "Ui", amount: 2, unit: "stuks", category: "Groenten"},
+    {name: "Ui", amount: 2, unit: "stuk", category: "Groenten"},
     {name: "Olijfolie", amount: 2, unit: "el", category: "Overig"},
-    {name: "Speklapjes", amount: 2, unit: "stuks", category: "Vlees/Vis"}
+    {name: "Speklapjes", amount: 2, unit: "stuk", category: "Vlees/Vis"}
   ],
   "Pasta pesto": [
     {name: "Pasta", amount: 300, unit: "g", category: "Rijst/Couscous/Pasta"},
@@ -332,14 +332,14 @@ const recipes = {
   ],
   "Stroganov schotel": [
     {name: "Kipgehakt", amount: 600, unit: "g", category: "Vlees/Vis"},
-    {name: "Rode paprika", amount: 2, unit: "stuks", category: "Groenten"},
-    {name: "Ui", amount: 2, unit: "stuks", category: "Groenten"},
+    {name: "Rode paprika", amount: 2, unit: "stuk", category: "Groenten"},
+    {name: "Ui", amount: 2, unit: "stuk", category: "Groenten"},
     {name: "Champignons", amount: 1, unit: "bakje", category: "Groenten"},
     {name: "Crème fraîche", amount: 500, unit: "ml", category: "Zuivel"},
     {name: "Peper", amount: 0, unit: "", category: "Kruiden"},
     {name: "Zout", amount: 0, unit: "", category: "Kruiden"},
     {name: "Paprikapoeder", amount: 0, unit: "", category: "Kruiden"},
-    {name: "Kippenbouillonblokjes", amount: 3, unit: "stuks", category: "Kruiden"},
+    {name: "Kippenbouillonblokjes", amount: 3, unit: "stuk", category: "Kruiden"},
     {name: "Tomatenpuree", amount: 1, unit: "blikje", category: "Groenten"},
     {name: "Water", amount: 150, unit: "ml", category: "Overig"}
   ]
