Toevoegen cottage pie recept

--- a/index.html
+++ b/index.html
@@ -257,8 +257,6 @@ const recipes = {
     {name: "Tacokruiden", amount: 1, unit: "zakje", category: "Kruiden"},
     {name: "Koriander", amount: 15, unit: "g", category: "Groenten"},
     {name: "Olijfolie", amount: 2, unit: "el", category: "Overig"},
-    {name: "Zwarte peper", amount: 0, unit: "", category: "Kruiden"},
-    {name: "Zout", amount: 0, unit: "", category: "Kruiden"}
   ],
   "Vissticks met spinazie à la crème en krieltjes": [
     {name: "Vissticks", amount: 20, unit: "stuk", category: "Vlees/Vis"},
@@ -266,7 +264,6 @@ const recipes = {
     {name: "Krieltjes", amount: 900, unit: "g", category: "Groenten"},
     {name: "Appelmoes", amount: 0, unit: "naar smaak", category: "Groenten"},
     {name: "Olijfolie", amount: 4, unit: "el", category: "Overig"},
-    {name: "Zout", amount: 0, unit: "naar smaak", category: "Kruiden"},
     {name: "Zwarte peper", amount: 0, unit: "naar smaak", category: "Kruiden"}
   ],
   "Ovenschotel met gehakt broccoli": [
@@ -277,8 +274,6 @@ const recipes = {
     {name: "Ui", amount: 1, unit: "stuk", category: "Groenten"},
     {name: "Knoflook", amount: 2, unit: "teentjes", category: "Groenten"},
     {name: "Gehaktkruiden", amount: 1, unit: "zakje", category: "Kruiden"},
-    {name: "Zout", amount: 0, unit: "", category: "Kruiden"},
-    {name: "Peper", amount: 0, unit: "", category: "Kruiden"},
     {name: "Roomboter", amount: 25, unit: "g", category: "Zuivel"},
     {name: "Crème fraîche", amount: 200, unit: "ml", category: "Zuivel"},
     {name: "Olijfolie", amount: 2, unit: "el", category: "Overig"}
@@ -291,9 +286,7 @@ const recipes = {
     {name: "Kokosmelk", amount: 200, unit: "ml", category: "Zuivel"},
     {name: "Tomatenblokjes", amount: 1, unit: "blikje", category: "Groenten"},
     {name: "Couscous", amount: 300, unit: "g", category: "Rijst/Couscous/Pasta"},
-    {name: "Water", amount: 0, unit: "volgens verpakking", category: "Overig"},
     {name: "Olijfolie", amount: 2, unit: "el", category: "Overig"},
-    {name: "Zout / Peper", amount: 0, unit: "naar smaak", category: "Kruiden"}
   ],
   "Hutspot met speklapjes": [
     {name: "Aardappelen", amount: 1000, unit: "g", category: "Groenten"},
@@ -310,9 +303,7 @@ const recipes = {
     {name: "Cherry tomaten", amount: 250, unit: "g", category: "Groenten"},
     {name: "Peper", amount: 0, unit: "", category: "Kruiden"},
     {name: "Zout", amount: 0, unit: "", category: "Kruiden"},
-    {name: "Olijfolie", amount: 0, unit: "scheutje", category: "Overig"},
     {name: "Pijnboompitten", amount: 60, unit: "g", category: "Overig"},
-    {name: "Rucola", amount: 0, unit: "handje", category: "Groenten"},
     {name: "Pesto", amount: 4, unit: "el", category: "Overig"}
   ],
   "Prei schotel": [
@@ -336,12 +327,15 @@ const recipes = {
     {name: "Ui", amount: 2, unit: "stuk", category: "Groenten"},
     {name: "Champignons", amount: 1, unit: "bakje", category: "Groenten"},
     {name: "Crème fraîche", amount: 500, unit: "ml", category: "Zuivel"},
-    {name: "Peper", amount: 0, unit: "", category: "Kruiden"},
-    {name: "Zout", amount: 0, unit: "", category: "Kruiden"},
-    {name: "Paprikapoeder", amount: 0, unit: "", category: "Kruiden"},
     {name: "Kippenbouillonblokjes", amount: 3, unit: "stuk", category: "Kruiden"},
     {name: "Tomatenpuree", amount: 1, unit: "blikje", category: "Groenten"},
     {name: "Water", amount: 150, unit: "ml", category: "Overig"}
+  ],
+  "Cottage pie": [
+    {name: "Rundergehakt", amount: 500, unit: "g", category: "Vlees/Vis"},
+    {name: "Wortels/doperwten", amount: 1, unit: "blik", category: "Groenten"},
+    {name: "Aardappelen", amount: 1000, unit: "g", category: "Groenten"},
+    {name: "Melk", amount: 500, unit: "ml", category: "Groenten"}
   ]
 };
 
