--- a/index.html
+++ b/index.html
@@ -255,14 +255,13 @@ const recipes = {
     {name: "Zure room", amount: 125, unit: "g", category: "Zuivel"},
     {name: "Guacamole", amount: 150, unit: "g", category: "Groenten"},
     {name: "Tacokruiden", amount: 1, unit: "zakje", category: "Kruiden"},
-    {name: "Koriander", amount: 15, unit: "g", category: "Groenten"},
+    {name: "Koriander", amount: 15, unit: "g", category: "Groenten"}
   ],
   "Vissticks met spinazie à la crème en krieltjes": [
     {name: "Vissticks", amount: 20, unit: "stuk", category: "Vlees/Vis"},
     {name: "Spinazie", amount: 750, unit: "g", category: "Groenten"},
     {name: "Krieltjes", amount: 900, unit: "g", category: "Groenten"},
-    {name: "Appelmoes", amount: 0, unit: "naar smaak", category: "Groenten"},
-    {name: "Zwarte peper", amount: 0, unit: "naar smaak", category: "Kruiden"}
+    {name: "Appelmoes", amount: 0, unit: "naar smaak", category: "Groenten"}
   ],
   "Ovenschotel met gehakt broccoli": [
     {name: "Broccoli", amount: 1, unit: "stuk", category: "Groenten"},
@@ -273,7 +272,7 @@ const recipes = {
     {name: "Knoflook", amount: 2, unit: "teentjes", category: "Groenten"},
     {name: "Gehaktkruiden", amount: 1, unit: "zakje", category: "Kruiden"},
     {name: "Roomboter", amount: 25, unit: "g", category: "Zuivel"},
-    {name: "Crème fraîche", amount: 200, unit: "ml", category: "Zuivel"},
+    {name: "Crème fraîche", amount: 200, unit: "ml", category: "Zuivel"}
   ],
   "Kikkererwtencurry met couscous": [
     {name: "Kikkererwten", amount: 400, unit: "g", category: "Groenten"},
@@ -282,7 +281,7 @@ const recipes = {
     {name: "Kerriepoeder", amount: 1, unit: "el", category: "Kruiden"},
     {name: "Kokosmelk", amount: 200, unit: "ml", category: "Zuivel"},
     {name: "Tomatenblokjes", amount: 1, unit: "blikje", category: "Groenten"},
-    {name: "Couscous", amount: 300, unit: "g", category: "Rijst/Couscous/Pasta"},
+    {name: "Couscous", amount: 300, unit: "g", category: "Rijst/Couscous/Pasta"}
   ],
   "Hutspot met speklapjes": [
     {name: "Aardappelen", amount: 1000, unit: "g", category: "Groenten"},
