--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 </div>
 
 <div class="shopping-list">
-  <h2>Boodschappenlijst Avontuur!</h2>
+  <h2>Boodschappenlijst!</h2>
   <div id="list"></div>
   
   <img src="picture.jpg" alt="Decoratieve afbeelding" class="shopping-list-image">
