--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ const recipes = {
     {name: "Rundergehakt", amount: 500, unit: "g", category: "Vlees/Vis"},
     {name: "Wortels/doperwten", amount: 1, unit: "blik", category: "Groenten"},
     {name: "Aardappelen", amount: 1000, unit: "g", category: "Groenten"},
-    {name: "Melk", amount: 500, unit: "ml", category: "Groenten"}
+    {name: "Melk", amount: 500, unit: "ml", category: "Zuivel"}
   ]
 };
 
