--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>De Recepten Raket!</title>
+
+<!-- ✅ Voeg dit toe -->
+<link rel="icon" type="image/png" href="logo.png">
+<link rel="apple-touch-icon" href="logo.png">
+<meta name="theme-color" content="#5cb377">
+<!-- ✅ Einde toevoeging -->
 <style>
   /* 🚀 Quirky Kleurenpalet & Lettertype (Geïnspireerd door de afbeelding) */
   @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Kalam:wght@300;400;700&display=swap');
