--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <h2>Boodschappenlijst! <img src="logo2.png" alt="Logo" class="logo-header"></h2>
   <div id="list"></div>
   <button id="export">📄 Exporteer boodschappenlijst</button>
-  <img src="logo2.png" alt="Decoratieve afbeelding" class="shopping-list-image">
+  <img src="picture.jpg" alt="Decoratieve afbeelding" class="shopping-list-image">
 </div>
 
 <script>
